--- a/01_Cirq-Qiskit_QFT.Rmd
+++ b/01_Cirq-Qiskit_QFT.Rmd
@@ -6,7 +6,7 @@ jupyter:
       extension: .Rmd
       format_name: rmarkdown
       format_version: '1.2'
-      jupytext_version: 1.9.1
+      jupytext_version: 1.3.2
   kernelspec:
     display_name: Python 3
     language: python
@@ -66,15 +66,31 @@ def qft_circuit_swap(qubits, circuit=[]):
 ```
 
 ```{python}
-qubits = cirq.LineQubit.range(4)
+N=4
+qubits = cirq.LineQubit.range(N)
 circuit = qft_circuit_swap(qubits, [])
 print(circuit)
 ```
 
 ```{python}
+ghz = np.zeros(2**N)
+ghz[0] = 1
+ghz[-1] = 1
+ghz = ghz / np.sqrt(2)
+```
+
+```{python}
 simulator = cirq.Simulator()
-result = simulator.simulate(circuit)
+result = simulator.simulate(circuit, initial_state=ghz)
 print(np.around(result.final_state_vector, 3))
+```
+
+```{python}
+
+```
+
+```{python}
+# simulator.simulate?
 ```
 
 # QFT - Qiskit
